--- a/abstract.tex
+++ b/abstract.tex
@@ -1,1 +1,5 @@
-\lipsum[1]
+The corpus of reference genomes is rapidly expanding as more and more genome assemblies are released for a wide variety of species. The constant progress in sequencing technologies has led to the release in 2021 of a first complete, telomere-to-telomere, gap-less assembly of a human genome, yet a myriad of eukaryote species still lack genomic resources. For animals, genomic projects have focused on species closely related to humans (vertebrates) and those with an impact on health and agriculture. By contrast, there is still a dearth of non-vertebrate genomes that poorly represents their tremendous diversity (about 95\% of animal diversity).
+
+Haploid chromosome-level genome assemblies using long reads and chromosome conformation capture (such as Hi-C) have become a standard in recent publications. To provide a haploid representation of diploid and polyploid genomes, assemblers collapse haplotypes into a single sequence, yet they are sensitive to high levels of heterozygosity and often yield fragmented assemblies with artefactual duplications. I tackled these shortcomings with two strategies: improving collapsed assemblies with a comprehensive long-read assembly methodology tuned for highly heterozygous genomes; and separating haplotypes to obtain phased assemblies using long reads and Hi-C. The assemblies were finally brought to chromosome-level scaffolds with a new Hi-C scaffolder, which demonstrated its efficiency on genomes of non-model organisms.
+
+These methods were applied to generate chromosome-level assemblies of three species for which none or few assemblies of closely related species were available: the bdelloid rotifer \textit{Adineta vaga}, the coral \textit{Astrangia poculata}, and the chaetognath \textit{Flaccisagitta enflata}. These high-quality assemblies contribute to filling the current gaps in non-vertebrate genomics and pave the way for future sequencing initiatives aiming to generate such reference assemblies for all the species on Earth.
