--- a/bibliography.bib
+++ b/bibliography.bib
@@ -21,14 +21,14 @@ year = {2019}
 }
 
 @article{raven,
-author = {Vaser, Robert and Šikić, Mile},
-doi = {10.1101/2020.08.07.242461},
-journal = {bioRxiv},
-title = {{Raven: a \textit{de novo} genome assembler for long reads}},
-volume = {doi},
-pages = {10.1101/2020.08.07.242461},
-year = {2020}
+  title={Time-and memory-efficient genome assembly with Raven},
+  author={Vaser, Robert and {\v{S}}iki{\'c}, Mile},
+  journal={Nature Computational Science},
+  pages={1--5},
+  year={2021},
+  publisher={Nature Publishing Group}
 }
+
 
 @article{flye,
 author = {Kolmogorov, Mikhail and Yuan, Jeffrey and Lin, Yu and Pevzner, Pavel A.},
@@ -555,6 +555,18 @@ Onuchic, José N and Di Pierro, Michele and Aiden, Erez Lieberman and Rowland, B
 
 %%%%% CHAETOGNATH
 
+
+@article{tokioka1965taxonomical,
+  title={The taxonomical outline of Chaetognatha},
+  author={Tokioka, Takasi},
+  journal={Publications of the Seto Marine Biological Laboratory},
+  volume={12},
+  number={5},
+  pages={335--357},
+  year={1965},
+  publisher={Seto Marine Biological Laboratory, Field Science Education and Research~…}
+}
+
 @article{alvarino1964bathymetric,
   title={Bathymetric distribution of chaetognaths},
   author={Alvarino, Angeles},
@@ -622,7 +634,7 @@ Onuchic, José N and Di Pierro, Michele and Aiden, Erez Lieberman and Rowland, B
 }
 
 @misc{animal_genome_size,
-title = {{Animal Genome Size Database, \url{http://www.genomesize.com}}},
+title = {{Animal Genome Size Database, \url{http://www.genomesize.com}, unpublished data}},
 author = {Gregory, T Ryan},
 year = {2021}
 }
@@ -976,11 +988,13 @@ year = {2016}
 
 @article{guiglielmoni2020,
   title={Overcoming uncollapsed haplotypes in long-read assemblies of non-model organisms},
-  author={Guiglielmoni, Nad{\`e}ge and Houtain, Antoine and Derzelle, Alessandro and van Doninck, Karine and Flot, Jean-Fran{\c{c}}ois},
-  journal={bioRxiv},
-  year={2020},
-  doi = {doi.org/10.1101/2020.03.16.993428},
-  publisher={Cold Spring Harbor Laboratory}
+  author={Guiglielmoni, Nad{\`e}ge and Houtain, Antoine and Derzelle, Alessandro and Van Doninck, Karine and Flot, Jean-Fran{\c{c}}ois},
+  journal={BMC Bioinformatics},
+  year={2021},
+  volume={22},
+  number={1},
+  pages={1--23},
+  publisher={BioMed Central}
 }
 
 @article{ko2021widespread,
@@ -2384,6 +2398,16 @@ title = {{IPA, \url{https://github.com/PacificBiosciences/pbbioconda}}},
 author = {Pacific Biosciences},
 year = {2018}
 }
+
+@article {mdbg,
+	author = {Ekim, Bar{\i}{\c s} and Berger, Bonnie and Chikhi, Rayan},
+	title = {Minimizer-space de Bruijn graphs},
+	year = {2021},
+	doi = {10.1101/2021.06.09.447586},
+	publisher = {Cold Spring Harbor Laboratory},
+	journal = {bioRxiv}
+}
+
 
 @article{hifiasm,
   title={Haplotype-resolved \textit{de novo} assembly using phased assembly graphs with hifiasm},
