--- a/main.tex
+++ b/main.tex
@@ -78,7 +78,7 @@
 \begin{document}
 
 % title page and frontmatter
-\maketitle
+%\maketitle
 \frontmatter
 
 % declaration, acknowledgement, and abstract
@@ -103,7 +103,6 @@
 
 % insert paper
 
-
 \input{intro.tex}
 
 \input{benchmark.tex}
@@ -116,7 +115,7 @@
 
 \input{astrangia_poculata.tex}
 
-\input{flaccisagitta_enflata.tex}
+\input{chaetognath.tex}
 
 \input{discussion.tex}
 
