--- a/scientific_comm.tex
+++ b/scientific_comm.tex
@@ -1,6 +1,6 @@
 \section*{Peer-reviewed publications}
 
-\textbf{Nadège Guiglielmoni}, Antoine Houtain, Alessandro Derzelle, Karine Van Doninck, Jean-François Flot. Overcoming uncollapsed haplotypes in long-read assemblies of non-model organisms. \textit{BMC Bioinformatics}, in press.
+\textbf{Nadège Guiglielmoni}, Antoine Houtain, Alessandro Derzelle, Karine Van Doninck, Jean-François Flot. Overcoming uncollapsed haplotypes in long-read assemblies of non-model organisms. \textit{BMC Bioinformatics} (2021).
 
 Lyam Baudry, \textbf{Nadège Guiglielmoni}, Hervé Marie-Nelly, Alexandre Cormier, Martial Marbouty, Komlan Avia, Yann Loe Mie, Olivier Godfroy, Lieven Sterck, J Mark Cock, Christophe Zimmer, Susana M Coelho, Romain Koszul. instaGRAAL: chromosome-level quality scaffolding of genomes using a proximity ligation-based scaffolder. \textit{Genome Biology} (2020).
 
@@ -10,7 +10,7 @@ Roland Faure, \textbf{Nadège Guiglielmoni}, Jean-François Flot. GraphUnzip: un
 
 Zeyuan Chen, Özgül Doğan, \textbf{Nadège Guiglielmoni}, Anne Guichard, Michael Schrödl. The \textit{de novo} genome of the "Spanish" slug \textit{Arion vulgaris} Moquin-Tandon, 1855 (Gastropoda: Panpulmonata): massive expansion of transposable elements in a major pest species. \textit{bioRxiv} (2020). 
 
-Paul Simion, Jitendra Narayan, Antoine Houtain, Alessandro Derzelle, Lyam Baudry, Emilien Nicolas, Marie Cariou, \textbf{Nadège Guiglielmoni}, Djampa Kozlowski, Florence Rodriguez Gaudray, Matthieu Terwagne, Julie Virgo, Benjamin Noel, Patrick Wincker, Etienne GJ Danchin, Martial Marbouty, Bernard Hallet, Romain Koszul, Antoine Limasset, Jean-François Flot, Karine Van Doninck. Homologous chromosomes in asexual rotifer \textit{Adineta vaga} suggest automixis. \textit{bioRxiv} (2020).
+Paul Simion, Jitendra Narayan, Antoine Houtain, Alessandro Derzelle, Lyam Baudry, Emilien Nicolas, Rohan Arora, Marie Cariou, Corinne Cruaud, Florence Rodriguez Gaudray, Clément Gilbert, \textbf{Nadège Guiglielmoni}, Boris Hespeels, Djampa Kozlowski, Karine Labadie, Antoine Limasset, Marc Llirós, Martial Marbouty, Matthieu Terwagne, Julie Virgo, Richard Cordaux, Etienne GJ Danchin, Bernard Hallet, Romain Koszul, Jean-François Flot, Karine Van Doninck. Homologous chromosomes in asexual rotifer \textit{Adineta vaga} suggest automixis. \textit{bioRxiv} (2020).
 
 \section*{Talks}
 
