--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,10 +1,12 @@
 
-The first individual I would like to thank is not a human, but my dog Curie. He became a part of my life on April 16th, 2019, thanks to the charity Vivre Libre, and he became pivotal in the completion of my PhD, as he made sure that I would get two walks per day and would make every day easier with his cuteness. He interacted with several collaborators and followed me to Munich, at a time when I was so stressed to get valuable data for my PhD During the coronavirus pandemic, he was the only one sharing my office. Thanks to him, I met at the Wolvendael Park an incredible group: Alain Bourguignon, Benoit Dethiège, Caroline Gréant, Chloé Mertens, Gwen Legein, Julie Declerck, Ludovic Berghmans, Nadia Swaelens, and last but not least, Valentine Legrand. We stuck together when the coronavirus changed all our lives and we became a tight group. I will cherish the memories of our Friday drinks together and the birthdays we celebrated. Our group made Uccle feel like a home that I would be happy to return to.\\
+The first individual I would like to thank is not a human, but my dog Curie. He became a part of my life on 16 April 2019, thanks to the charity Vivre Libre, and he became pivotal in the completion of my PhD, as he made sure that I would get two walks per day and made every day easier with his cuteness. He interacted with several collaborators and followed me to Munich, at a time when I was so stressed to get valuable data for my PhD. During the coronavirus pandemic, he was the only one sharing my office. Thanks to him, I met at the Wolvendael Park an incredible group: Alain Bourguignon, Benoit Dethiège, Caroline Gréant, Chloé Mertens, Gwen Legein, Julie Declerck, Ludovic Berghmans, Nadia Swaelens, and last but not least, Valentine Legrand. We stuck together when the coronavirus changed all our lives and we became a tight group. I will cherish the memories of our Friday drinks together and the birthdays we celebrated. Our group made Uccle feel like a home that I would be happy to return to.\\
 
-I would like to thank my supervisor Jean-François Flot and my co-supervisor Romain Koszul. Jean-François Flot welcomed me into his team and gave me the means to complete my PhD. I do hope that I lived up to his expectations, and even surpassed them. Funnily, Jean-François and I have opposite opinions on many subjects, which, I think, strengthened our work together. He made me benefit from his wide network and made sure that I would stay busy for many years to come. Romain Koszul welcomed me in his team full-time during the first three months of my PhD. I benefited from his huge knowledge of Hi-C with Aurèle Piazza, Axel Cournac, Cyril Matthey-Doret, Lyam Baudry, Martial Marbouty and Vittore Scolari. More specifically, Cyril Matthey-Doret started his PhD a little after I did, and I always saw him as a comrade-in-arms. I also want to thank Agnès Thierry and Christophe Chapard who took care of my Hi-C libraries and made my projects move forward. \\
+I would like to thank my supervisors Jean-François Flot and Romain Koszul. Jean-François Flot welcomed me into his team and gave me the means to complete my PhD. I do hope that I lived up to his expectations, and even surpassed them. Funnily, Jean-François and I have opposite opinions on many subjects, which, I think, strengthened our work together. He made me benefit from his wide network and made sure that I would stay busy for many years to come. Romain Koszul welcomed me in his team full-time during the first three months of my PhD. I benefited from his huge knowledge of Hi-C with Aurèle Piazza, Axel Cournac, Cyril Matthey-Doret, Lyam Baudry, Martial Marbouty and Vittore Scolari. More specifically, Cyril Matthey-Doret started his PhD a little after I did, and I always saw him as a comrade-in-arms. I also want to thank Agnès Thierry and Christophe Chapard who took care of my Hi-C libraries and made my projects move forward. \\
 
-I was lucky to be part of the Innovative Training Network IGNITE. I remember how intimidated I was during the first Network-wide Training Event, as I had so little knowledge of non-vertebrates due to my bachelor degree in Molecular Biology. I tried to make up for it during my PhD, and I hope that I succeeded. In this program, Michael Eitel was an incredible resource to rely on. I gave him the nickname of the "Babysitter", as his job of Project Manager made him in charge of all IGNITE students. Michi was an anchor through this all project, as he gave me advice about Nanopore DNA sequencing and RNA sequencing, and I hope that more people will be lucky to receive his advice in the future. Besides, Ramon Rivera-Vicéns and Ferenc Kagan have been my closest friends in the program. One night, after some partying in Split, they took me each by one arm to celebrate together being members of IGNITE, and since we have called ourselves the "Party People". I hope we will have more parties together, whatever the time or the place. \\
+I was also well surrounded at the Université libre de Bruxelles and in the EEG team, in particular with Ana Rodriguez-Jimenez, Catalina Ramírez-Portilla and Claire Chauveau. I had the opportunity to supervise Roland Faure during a Master degree internship, and to develop GraphUnzip together; I have no doubt he will succeed in his upcoming PhD too. I want to thank everybody in EBE, for the lunch breaks, and the sadly few game nights and evenings at the Tavernier. I owe many thanks to Laurent Grumiau, without whom I would not have been able to get any experiment done. \\
 
-I was lucky to have many collaborations during my PhD. I remember meetings in my living room with Anne Guichard, Kathryn Stankiewicz and Ksenia Juravel at the beginning of March 2020, shortly before COVID-19 disturbed everybody's life. Among all this madness, we were able with Kathryn to make our genome assembly of \textit{Astrangia poculata} work, and reach chromosome level. I regret though that Kathryn was not able to try all the sorts of cheese she should have. I was also fortunate to work on sponges with Antonio Ruiz and Kenneth Sandoval, on cones with Yihe Zhao, and on mollusks with Zeyuan Chen. \\
+I was lucky to be part of the Innovative Training Network IGNITE. I remember how intimidated I was during the first Network-wide Training Event, as I had so little knowledge of non-vertebrates due to my bachelor degree in Molecular Biology. I tried to make up for it during my PhD, and I hope that I succeeded. In this program, Michael Eitel was an incredible resource to rely on. I gave him the nickname of the "Babysitter", as his job of Project Manager made him in charge of all IGNITE students. Michi was an anchor through this whole project, as he gave me advice about Nanopore DNA sequencing and RNA sequencing, and I hope that more people will be lucky to receive his advice in the future. Besides, Ramon Rivera-Vicéns and Ferenc Kagan have been my closest friends in the program. One night, after some partying in Split, they took me each by one arm to celebrate together being members of IGNITE, and since we have called ourselves the "Party People". I hope we will have more parties together, whatever the time or the place. \\
 
-I want to thank my family and particularly my grandparents, Josette and André Maury, who welcomed me into their home during the first years of my college studies. 
+I had many collaborations during my PhD. I remember meetings in my living room with Anne Guichard, Kathryn Stankiewicz and Ksenia Juravel at the beginning of March 2020, shortly before COVID-19 disturbed everybody's life. Among all this madness, we were able with Kathryn to make our genome assembly of \textit{Astrangia poculata} work and reach chromosome level, although I regret that Kathryn was not able to try all the sorts of cheese she should have. I was also fortunate to work on sponges with Antonio Ruiz and Kenneth Sandoval, on cones with Yihe Zhao, and on mollusks with Zeyuan Chen. \\
+
+I want to thank my friends Lola Champesme and Quentin Schumacher, who did not abandon me even when I was not the best person, and my unusual friend Antoine Régnier, who is my secret IT support. I certainly do not call the three of you enough, but I never stop caring about you. Finally, I thank my whole family, even the ones that disappeared along the way, and particularly my grandparents, Josette and André Maury, who welcomed me into their home during the first years of my college studies. I dedicate this thesis to my father, Jean-Claude Guiglielmoni, who has always been a quiet, strong and loving presence. \\
