--- a/benchmark.tex
+++ b/benchmark.tex
@@ -12,7 +12,7 @@
 
 Long reads have made highly contiguous assemblies accessible for all genomes, but most long-read assemblers aim to produce a haploid assembly, regardless of the actual degree of ploidy (haploid, diploid or polyploid) of the genome being assembled. To obtain haploid assemblies from diploid or polyploid genomes, homologous chromosomes need to be collapsed into a single sequence. This process is straightforward for homozygous regions, but more challenging for heterozygous regions as the assembler needs to find a consensus between haplotypes or select one to represent the region. Collapsing haplotypes is especially challenging for non-model diploid or polyploid genomes, as they often display variable levels of heterozygosity across their genomes. \\
 
-I designed a benchmark of seven long-read assemblers, namely Canu \cite{canu}, Flye \cite{flye}, NextDenovo \cite{nextdenovo}, Ra \cite{ra}, Raven \cite{raven}, Shasta \cite{shasta} and wtdbg2 \cite{wtdbg2}. I tested these assemblers on the genome of a non-model diploid organism, \textit{Adineta vaga}, for which high-coverage sequencing datasets of both PacBio and Nanopore low-accuracy long reads were available. I investigated the improvement of haplotype-collapsing when combining these assemblers with pre-assembly read filtering and post-assembly haplotig purging? I defined a thorough evaluation strategy to identify the best haploid assemblies, based on assembly size, contiguity, completeness, and a new metric of haploidy that was implemented in the tool HapPy. I also evaluated the impact of sequencing depth on haplotype collapsing and overall assembly quality, and found that most assemblers were optimized for a sequencing depth of 40X. A higher sequencing depth would not necessarily improve the assemblies but would rather lead to more uncollapsed haplotypes. \\
+I designed a benchmark of seven long-read assemblers, namely Canu \cite{canu}, Flye \cite{flye}, NextDenovo \cite{nextdenovo}, Ra \cite{ra}, Raven \cite{raven}, Shasta \cite{shasta} and wtdbg2 \cite{wtdbg2}. I tested these assemblers on the genome of a non-model diploid organism, \textit{Adineta vaga}, for which high-coverage sequencing datasets of both PacBio and Nanopore low-accuracy long reads were available. I investigated the improvement of haplotype-collapsing when combining these assemblers with pre-assembly read filtering and post-assembly haplotig purging. I defined a thorough evaluation strategy to identify the best haploid assemblies, based on assembly size, contiguity, completeness, and a new metric of haploidy that was implemented in the tool HapPy. I also evaluated the impact of sequencing depth on haplotype collapsing and overall assembly quality, and found that most assemblers were optimized for a sequencing depth of 40X. A higher sequencing depth would not necessarily improve the assemblies but would rather lead to more uncollapsed haplotypes. \\
 
 I initiated this benchmark to evaluate how long-read assemblers behaved on a small non-model eukaryote genome, and applied these strategies in several assembly projects for larger genomes, including \textit{Astrangia poculata} and \textit{Flaccisagitta enflata}. \\
 
